--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,16 +1,16 @@
 .page {
-    max-width: 1280px;
-    margin: auto;
+  max-width: 100%;
+  margin: auto;
 }
 
 @media screen and (max-width: 1023px) {
-    .page {
-        margin: 0 8%;
-    }
+  .page {
+    margin: 0 8%;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .page {
-        margin: 0;
-    }
+  .page {
+    margin: 0;
+  }
 }
